--- a/package.json
+++ b/package.json
@@ -22,12 +22,14 @@
     "@trpc/react-query": "^10.44.1",
     "@trpc/server": "^10.44.1",
     "bcrypt": "^5.1.1",
+    "clsx": "^2.0.0",
     "next": "^14.0.3",
     "next-auth": "^4.24.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "server-only": "^0.0.1",
     "superjson": "^2.2.1",
+    "tailwind-merge": "^2.0.0",
     "zod": "^3.22.4"
   },
   "devDependencies": {
