--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "type": "module",
   "scripts": {
     "build": "next build",
-    "db:push": "prisma db push",
-    "db:studio": "prisma studio",
+    "dbpush": "prisma db push",
+    "studio": "prisma studio",
     "dev": "next dev",
     "postinstall": "prisma generate",
     "lint": "next lint",
