--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "@trpc/next": "^10.44.1",
     "@trpc/react-query": "^10.44.1",
     "@trpc/server": "^10.44.1",
-    "bcrypt": "^5.1.1",
+    "argon2": "^0.31.2",
     "clsx": "^2.0.0",
     "next": "^14.0.3",
     "next-auth": "^4.24.5",
@@ -34,7 +34,6 @@
   },
   "devDependencies": {
     "@next/eslint-plugin-next": "^14.0.3",
-    "@types/bcrypt": "^5.0.2",
     "@types/eslint": "^8.44.7",
     "@types/node": "^20.10.0",
     "@types/react": "^18.2.38",
