--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "superjson": "^2.2.1",
     "tailwind-merge": "^2.0.0",
     "uploadthing": "^6.0.3",
-    "zod": "^3.22.4"
+    "zod": "^3.22.4",
+    "zod-prisma-types": "^3.1.6"
   },
   "devDependencies": {
     "@next/eslint-plugin-next": "^14.0.3",
