add react-email & resend

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
+/react-email
 /node_modules
 /.pnp
 .pnp.js
@@ -42,3 +43,4 @@ yarn-error.log*
 *.tsbuildinfo
 
 /src/server/api/schema/generated
+/.react-email
