--- a/package.json
+++ b/package.json
@@ -7,14 +7,17 @@
     "build": "next build",
     "push": "prisma db push",
     "studio": "prisma studio",
-    "dev": "next dev --turbo",
+    "dev": "next dev",
     "postinstall": "prisma generate",
     "lint": "next lint",
-    "start": "next start"
+    "start": "next start",
+    "email": "email dev --port 4000 --dir src/emails"
   },
   "dependencies": {
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^5.6.0",
+    "@react-email/components": "0.0.12",
+    "@react-email/render": "^0.0.10",
     "@t3-oss/env-nextjs": "^0.7.1",
     "@tanstack/react-query": "^4.36.1",
     "@trpc/client": "^10.44.1",
@@ -29,6 +32,8 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-dropzone": "^14.2.3",
+    "react-email": "1.10.0",
+    "resend": "^2.0.0",
     "server-only": "^0.0.1",
     "superjson": "^2.2.1",
     "tailwind-merge": "^2.0.0",
