--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "next build",
     "push": "prisma db push",
     "studio": "prisma studio",
+    "generate": "prisma generate",
     "dev": "next dev",
     "postinstall": "prisma generate",
     "lint": "next lint",
